# projects

./: .angular-cli.json  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.overrride.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
Udemy-Time-Series-Analysis/: requirements.txt
Udemy-Time-Series-Analysis/01-NumPy/: 00-NumPy-Arrays.ipynb  02-NumPy-Operations.ipynb
Udemy-Time-Series-Analysis/02-Pandas/: 03-Missing-Data.ipynb  07-Pandas-Exercises.ipynb
Udemy-Time-Series-Analysis/03-Pandas-Visualization/: 00-Pandas Built-in Data Visualization.ipynb  01-Customizing-Plots.ipynb  02-Pandas-Data-Visualization-Exercise.ipynb
Udemy-Time-Series-Analysis/04-Time-Series-with-Pandas/: 04-Visualizing-Time-Series-Data.ipynb  05-Pandas-Time-Series-Exercises-SET-ONE.ipynb  07-Time-Series-with-Pandas-Project-Exercise-SET-TWO.ipynb
angular/: README.md
angular/angular6/: package-lock.json  package.json
angular/fitness-tracker/: package-lock.json  package.json
ansible/mastering-ansible/: control.pub  dev  loadbalancer.yml
bootstrap4-brad-traversy/bootstrap_sandbox/: 2_2_basic_typography.html  2_3_text_alignment_display.html  2_4_floats_position.html
bootstrap4-brad-traversy/bs4boiler/: gulpfile.js  package-lock.json
bootstrap4-brad-traversy/bs4bolier/: index.html
bootstrap4-brad-traversy/glozzom/: gulpfile.js  package-lock.json  package.json
bootstrap4-brad-traversy/koala/: gulpfile.js  package-lock.json  package.json
bootstrap4-brad-traversy/looplab/: gulpfile.js  package-lock.json  package.json
celeryapp/: Dockerfile  docker-entrypoint.sh  readme.md
celeryapp/main/: admin.py  models.py
chatty/: package.json  readme.md
chatty/client/: App.js  navigation.js  package.json
chatty/server/: index.js
cmake/basic_app/: CMakeLists.txt
cmake/basic_app/toolkits/mylib/: mylib.h
cmake/basic_app/toolkits/myotherlib/: CMakeLists.txt
compare-yourself/: package-lock.json  package.json
complete_guide/Assignment4/: package-lock.json
complete_guide/basics/: App.js  app.json  index.js  package-lock.json  package.json
complete_guide/shoppinglist/: Dockerfile  docker-compose.yml  package-lock.json
complete_guide_to_css/basics-01-understanding-the-course-project-starting-code/: index.html  main.css
complete_guide_to_css/course-project/: index.html  main.css  main.js  shared.css  shared.js  shared.prod.css
complete_guide_to_css/css-in-action/: index.html
complete_guide_to_css/diving-deeper-01-project-introducing-the-box-model-starting-code/: index.html  main.css
complete_guide_to_css/diving-deeper-06-assignment-problem/: index.html  main.css
complete_guide_to_css/flexbox-02-creating-a-flex-container/: main.css
complete_guide_to_css/flexbox-10-using-the-order-property-starting-code/: index.html  main.css
complete_guide_to_css/grid-01-using-the-grid-on-our-projectstarting-code/: main.css
complete_guide_to_css/grid-05-assignment-1-start/: main.css
complete_guide_to_css/grid-16-prepared-auto-lectures/: index.html  main.css
complete_guide_to_css/position-02-working-with-fixed-starting-code/: main.css
complete_guide_to_css/sass-01-installing-sass-starting-code/: main.css  main.css.map  main.scss
complete_guide_to_css/transforms-4-3d-starting-code/: main.css
conan/: README.md
conan/conan_timer/: CMakeLists.txt
conan/google_tests_demo/: conanfile.txt  test.cpp
css/tailwind-stream/: .eslintrc.json  package-lock.json  package.json  vue.config.js
data-analysis/: README.md
data-analysis/data_quest/: Pipfile
django/celeryapp/: docker-compose.yml  requirements.txt
django/geodjango/: .gitignore  Dockerfile  build.sh  db_create.sql
django/scrapy-bikeshare/: scrapy.cfg
django/scrapy-disruptions/: readme.md  scrapy.cfg
django/scrapy-tutorial/: requirements.txt
django/transitgtfs/: Dockerfile  docker-compose.yml  manage.py
django/wagtail_hosts/: README.rst  manage.py
django_db_constraints_test/: requirements.txt
django_db_constraints_test/myapp/: models.py
express-serverless/: package.json
express-serverless/views/: index.hbs  users.hbs
fitness-tracker/: README.md  package-lock.json  package.json
fitness-tracker/src/: index.html  styles.css
geodjango/: docker-compose.yml
geodjango/geodjango/: urls.py
geodjango/world/: admin.py
kafka/feed_processor/: feedmessage_processor.py  feedrequests_producer.py  requirements.txt
lists-conditionals--assignment-problem2/src/: App.js
node/academind_complete_guide/: message.txt
node/microservices-course/: README.md
projects/archive/cmake/basic_app/applications/myapp/: CMakeLists.txt  main.cpp
projects/archive/cmake/basic_app/toolkits/mylib/: CMakeLists.txt  mylib.c++
projects/archive/conan/google_tests_demo/: CMakeLists.txt  README.md
projects/archive/django/wagtail_hosts/: .coveragerc  .editorconfig  pyproject.toml
projects/archive/django/wagtail_hosts/config/: api_router.py  celery_app.py  urls.py
projects/archive/django/wagtail_hosts/config/settings/: local.py
projects/archive/django/wagtail_hosts/wagtail_hosts/templates/: base.html
projects/archive/django/wagtail_hosts/wagtail_hosts/users/: admin.py  urls.py
projects/archive/django/wagtail_hosts/wagtail_hosts/users/tests/: test_models.py  test_urls.py
projects/bpmn-dmn-tutorial/: README.md  beverage.dmn  orderDrink.bpmn
projects/command-line-rust/: .gitignore  README.md
projects/django/: README.md
projects/eks-tf-tutorial/: .editorconfig  .gitignore  Makefile  README.md
projects/functional-reactive-ddd/: README.md  build.sbt
projects/temporal-jedi-demo/party-service/: .flake8  pyproject.toml
projects/temporal-jedi-demo/party-service/party_service/: activities.py  main.py
react-native/: .gitignore  README.md
scrapy-bikeshare/: Pipfile  alembic.ini
scrapy-disruptions/: Pipfile  readme.md
scrapy-distruptions/: mta_disruptions.jl  readme.md  requirements.txt  scrapy.cfg
section3_basics/: package.json
spark/: README.md
src/: index.html
tailwind-stream/: package.json
transitgtfs/: readme.md  requirements.txt
(+1309 files in other folders)
