[tool.poetry]
name = "party-service"
version = "0.1.0"
description = ""
authors = ["gregorybrown <gregbrowndev@gmail.com>"]
readme = "README.md"
packages = [{include = "party_service"}]

[tool.poetry.dependencies]
python = "^3.11"
temporalio = "^0.1b4"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
mypy = "^0.991"
isort = "^5.10.1"
flake8 = "^6.0.0"
freezegun = "^1.2.2"
pytest-asyncio = "^0.20.2"
safety = "^2.3.3"
bandit = "^1.7.4"
ipython = {version = "^8.7.0"}

[tool.mypy]
ignore_missing_imports = true
#plugins = "sqlalchemy.ext.mypy.plugin"
disallow_incomplete_defs = true
disallow_untyped_defs = true

[tool.isort]
profile = "black"
quiet = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
targets = ["tariff_management"]
skips = ["B101"]
exclude_dirs =["tests"]