[tool.poetry]
name = "wagtail_hosts"
version = "0.1.0"
description = "A project to test Wagtail on multiple sites served on subdomains by django_hosts"
authors = ["Greg Brown <greg.brown@itoworld.com>"]

[tool.poetry.dependencies]
python = "^3.8"
wagtail = "^2.8"
pytz = "^2019.3"
python-slugify = "^4.0.0"
argon2-cffi = "^19.2.0"
whitenoise = "^5.0.1"
redis = "^3.4.1"
celery = "^4.4.0"
#django-celery-beat = "^1.6.0"
django-environ = "^0.4.5"
django-model-utils = "^4.0.0"
django-allauth = "^0.41.0"
django-crispy-forms = "^1.8.1"
django-redis = "^4.11.0"
djangorestframework = "^3.11.0"
coreapi = "^2.3.3"
gunicorn = "^20.0.4"
sentry-sdk = "^0.14.1"
#django-storages = {extras = ["boto3"], version = "^1.9.1"}
#django-anymail = {extras = ["mailgun"], version = "^7.0.0"}

[tool.poetry.dev-dependencies]
Werkzeug = "^1.0.0"
ipdb = "^0.12.3"
Sphinx = "^2.4.1"
psycopg2-binary = "^2.8.4"
mypy = "^0.761"
django-stubs = "^1.4.0"
pytest = "^5.3.5"
pytest-sugar = "^0.9.2"
flake8 = "^3.7.9"
coverage = "^5.0.3"
black = "^19.10b0"
pylint-django = "^2.0.13"
pylint-celery = "^0.3"
pre-commit = "^2.0.1"
factory-boy = "^2.12.0"
django-debug-toolbar = "^2.2"
django-extensions = "^2.2.8"
django-coverage-plugin = "^1.8.0"
pytest-django = "^3.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
